# Paper-down

./: .gitignore  LICENSE  README.md  paper_down.py  pyproject.toml
src/: download.py  paper_down.py  parse.py
src/paper-down/: __init__.py  download.py  paperInfo.py  parse.py
tests/: test_paper.py  test_parse.py
typings/thefuzz/: StringMatcher.pyi  fuzz.pyi  process.pyi  string_processing.pyi  utils.pyi
